[gd_scene load_steps=2 format=3 uid="uid://c27wojwnd5b57"]

[ext_resource type="Script" path="res://Laser.gd" id="1_jqnp2"]

[node name="Laser" type="Node2D"]
script = ExtResource("1_jqnp2")

[node name="ChargeTime" type="Timer" parent="."]

[node name="Marker" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, -10000, 0)

[node name="Beam" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, -10000, 0)
width = 0.0
default_color = Color(1, 0.137255, 0.215686, 1)

[node name="Collider" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2d" type="CollisionShape2D" parent="Collider"]

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShrinkTimer" type="Timer" parent="."]
wait_time = 0.02

[connection signal="timeout" from="ChargeTime" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Collider" to="." method="_on_collider_area_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="ShrinkTimer" to="." method="_on_shrink_timer_timeout"]
